Fix layout issues for kite youtubes on mobile.

--- a/_sass/_mediaq.scss
+++ b/_sass/_mediaq.scss
@@ -43,6 +43,16 @@
                 width: 340px;
             }
         }
+
+        .three-cols {
+            .col-left, 
+            .col-mid, 
+            .col-right {
+                width: 100%;
+                float: left;
+                clear: left;
+            }
+        }
     }
 
     nav.poem-menu {
